# stm32h7b3

./: .gitignore  AGENTS.md  Cargo.toml  Embed.toml  Readme.md  build.rs  memory.x
.cargo/: config.toml
.github/skills/west-env/: SKILL.md
REF/: cubemxconfig.md  ltdc-progress.md
app/: Cargo.toml  build.rs  memory.x
app/src/: main.rs
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
scripts/: flash-all.ps1
src/: main copy.rs  main.rs
zephyr-app/: CMakeLists.txt  README.md  app.overlay  prj.conf
zephyr-app/renode/: QUICKSTART.md  README.md  stm32h7b3.repl  stm32h7b3i_dk.resc  test_renode.sh
zephyr-app/scripts/: open_serial.sh
zephyr-app/src/: main.c
zephyr-app/src/display/: display.c  display.h
zephyr-app/src/led/: led.c  led.h
zephyr-app/src/ui/: ui.c  ui.h
