[workspace]
members = ["app", "bootloader"]
resolver = "2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "z"
overflow-checks = true
