[package]
edition = "2021"
name = "app"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { version = "0.6.0", path = "J:/Projects/embassy/embassy-stm32", features = ["defmt", "stm32h7b3li", "time-driver-tim2", "exti", "unstable-pac", "chrono"] }
embassy-sync = { version = "0.8.0", path = "J:/Projects/embassy/embassy-sync", features = ["defmt"] }
embassy-embedded-hal = { version = "0.6.0", path = "J:/Projects/embassy/embassy-embedded-hal" }
embassy-executor = { version = "0.10.0", path = "J:/Projects/embassy/embassy-executor", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", path = "J:/Projects/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.2", path = "J:/Projects/embassy/embassy-futures" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.2", default-features = false }
embedded-graphics = { version = "0.8.1" }
tinybmp = { version = "0.7.0" }
static_cell = "2.1.1"
